; ModuleID = '/home/carl/AnghaBench/git/extr_log-tree.c_show_signature.c'
source_filename = "/home/carl/AnghaBench/git/extr_log-tree.c_show_signature.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i32, i32 }
%struct.rev_info = type { i32 }
%struct.commit = type { i32 }

@STRBUF_INIT = common dso_local global %struct.strbuf zeroinitializer, align 4
@.str = private unnamed_addr constant [14 x i8] c"No signature\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rev_info*, %struct.commit*)* @show_signature to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @show_signature(%struct.rev_info* %0, %struct.commit* %1) #0 {
  %3 = alloca %struct.rev_info*, align 8
  %4 = alloca %struct.commit*, align 8
  %5 = alloca %struct.strbuf, align 4
  %6 = alloca %struct.strbuf, align 4
  %7 = alloca %struct.strbuf, align 4
  %8 = alloca i32, align 4
  store %struct.rev_info* %0, %struct.rev_info** %3, align 8
  store %struct.commit* %1, %struct.commit** %4, align 8
  %9 = bitcast %struct.strbuf* %5 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %9, i8* align 4 bitcast (%struct.strbuf* @STRBUF_INIT to i8*), i64 8, i1 false)
  %10 = bitcast %struct.strbuf* %6 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %10, i8* align 4 bitcast (%struct.strbuf* @STRBUF_INIT to i8*), i64 8, i1 false)
  %11 = bitcast %struct.strbuf* %7 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %11, i8* align 4 bitcast (%struct.strbuf* @STRBUF_INIT to i8*), i64 8, i1 false)
  %12 = load %struct.commit*, %struct.commit** %4, align 8
  %13 = call i64 @parse_signed_commit(%struct.commit* %12, %struct.strbuf* %5, %struct.strbuf* %6)
  %14 = icmp sle i64 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %2
  br label %40

16:                                               ; preds = %2
  %17 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %5, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %5, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %6, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %6, i32 0, i32 1
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @verify_signed_buffer(i32 %18, i32 %20, i32 %22, i32 %24, %struct.strbuf* %7, i32* null)
  store i32 %25, i32* %8, align 4
  %26 = load i32, i32* %8, align 4
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %28, label %34

28:                                               ; preds = %16
  %29 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %7, i32 0, i32 1
  %30 = load i32, i32* %29, align 4
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %34, label %32

32:                                               ; preds = %28
  %33 = call i32 @strbuf_addstr(%struct.strbuf* %7, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  br label %34

34:                                               ; preds = %32, %28, %16
  %35 = load %struct.rev_info*, %struct.rev_info** %3, align 8
  %36 = load i32, i32* %8, align 4
  %37 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %7, i32 0, i32 0
  %38 = load i32, i32* %37, align 4
  %39 = call i32 @show_sig_lines(%struct.rev_info* %35, i32 %36, i32 %38)
  br label %40

40:                                               ; preds = %34, %15
  %41 = call i32 @strbuf_release(%struct.strbuf* %7)
  %42 = call i32 @strbuf_release(%struct.strbuf* %5)
  %43 = call i32 @strbuf_release(%struct.strbuf* %6)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i64 @parse_signed_commit(%struct.commit*, %struct.strbuf*, %struct.strbuf*) #2

declare dso_local i32 @verify_signed_buffer(i32, i32, i32, i32, %struct.strbuf*, i32*) #2

declare dso_local i32 @strbuf_addstr(%struct.strbuf*, i8*) #2

declare dso_local i32 @show_sig_lines(%struct.rev_info*, i32, i32) #2

declare dso_local i32 @strbuf_release(%struct.strbuf*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
